[package]
name = "serveur-fourmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
external_maze_gen = ["cmake"] # Use an external maze generator

[dependencies]
serde_json = "1.0"
# rand = "0.8"

[dependencies.serde]
version = "1.0"
features = [
    "derive", # Allows derive(Serialize, Deserialize)
    "rc"      # Allows (partial) (de)serialization of Rc and Arc.
]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[build-dependencies]
cmake = { version = "0.1", optional = true }