[package]
name = "fourmilaby-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fourmilaby-core = { version = "*", path = "../fourmilaby-core" }
raylib = { branch = "4.5.0-redesign", git = "https://github.com/TSnake41/raylib-rs" }
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [
    "derive", # Allows derive(Serialize, Deserialize)
    "rc"      # Allows (partial) (de)serialization of Rc and Arc.
]