[package]
name = "fourmilaby-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_repr = "0.1"
fastrand = "1.8"
rayon = "1.7"

[dependencies.serde]
version = "1.0"
features = [
    "derive", # Allows derive(Serialize, Deserialize)
    "rc"      # Allows (partial) (de)serialization of Rc and Arc.
]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
