[package]
name = "fourmilaby-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fourmilaby-core = { version = "*", path = "../fourmilaby-core" }

serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [
    "derive", # Allows derive(Serialize, Deserialize)
    "rc"      # Allows (partial) (de)serialization of Rc and Arc.
]